test-suite/ide/undo012.fake
# Script simulating a dialog between coqide and coqtop -ideslave
# Run it via fake_ide
#
# Test backtracking in presence of nested proofs
# First, undoing the whole
#
INTERP Lemma aa : True -> True /\ True.
INTERP intro H.
INTERP split.
INTERP Lemma bb : False -> False.
INTERP intro H.
INTERP apply H.
INTERP Qed.
INTERP apply H.
INTERP Lemma cc : False -> True.
INTERP intro H.
INTERP destruct H.
INTERP Qed.
INTERP apply H.
INTERP Qed.
REWIND 1
# We should now be just before aa, without opened proofs
INTERPRAW Fail idtac.
INTERPRAW Fail Check aa.
INTERPRAW Fail Check bb.
INTERPRAW Fail Check cc.
